Move port and urls from compose.yml to compose.override.yml

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,9 +5,18 @@ services:
   identity.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://0.0.0.0:5001
+    ports:
+      - "5001:5001"
   profile.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://0.0.0.0:5002
+    ports:
+      - "5002:5002"
   projects.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://0.0.0.0:5003
+    ports:
+      - "5003:5003"
