--- a/src/WebUI/package.json
+++ b/src/WebUI/package.json
@@ -26,7 +26,8 @@
     "jquery": "^3.1.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "express": "^4.15.2"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-rc.2",
