Add Network to compose file and created a dockerfile for build of webui

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,17 @@ services:
     build:
       context: ./src/WebUI
       dockerfile: Dockerfile
-      
+    networks:
+      - cvpz
+
   identity.api:
     image: cvpz/identity.api
     container_name: identity_api
     build:
       context: ./src/Identity.api
       dockerfile: Dockerfile
+    networks:
+      - cvpz
 
   profile.api:
     image: cvpz/profile.api
@@ -22,6 +26,8 @@ services:
     build:
       context: ./src/Profile.api
       dockerfile: Dockerfile
+    networks:
+      - cvpz
 
   projects.api:
     image: cvpz/projects.api
@@ -29,3 +35,9 @@ services:
     build:
       context: ./src/Projects.api
       dockerfile: Dockerfile
+    networks:
+      - cvpz
+
+networks:
+  cvpz:
+    driver: bridge
